# yamjc

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.bak  README.md  benchmark.sh  graph.sh  lexer.flex  main.cpp  main.h  node.cpp  node.h  parser.yy  phases.drawio  run.sh  test.txt
ast/: class_declaration.cpp  class_declaration.h  declarations.cpp  declarations.h  declare_states.cpp  declare_states.h  expression.cpp  expression.h  formal_parameter_list.cpp  formal_parameter_list.h  goal.cpp  goal.h  identifier.cpp  identifier.h  main_class.cpp  main_class.h  method_body.cpp  method_body.h  method_declaration.cpp  method_declaration.h  node.cpp  node.h  nodes.h  return.cpp  return.h  statement.cpp  statement.h  type.cpp  type.h  variable_declaration.cpp  variable_declaration.h
examples/: binarytree.java  bubblesort.java  factorial.java  linearsearch.java  quicksort.java  treevisitor.java
include/: main.h
include/ast/: class_declaration.h  declarations.h  expression.h  formal_parameter_list.h  goal.h  identifier.h  main_class.h  method_body.h  method_declaration.h  node.h  nodes.h  primary_expression.h  return.h  statement.h  type.h  variable_declaration.h
include/cfg/: basic_block.h  copy.h  expression.h  ir_alloc.h  ir_argument.h  ir_array_access.h  ir_array_alloc.h  ir_array_assign.h  ir_array_length.h  ir_assign.h  ir_cond_jump.h  ir_copy.h  ir_expression.h  ir_jump.h  ir_method_call.h  ir_parameter.h  ir_return.h  ir_unary_expression.h  ir_uncond_jump.h  tac.h  unary_expression.h
include/smi/: activation.h  activation_stk.h  data_stk.h  interpreter.h
include/st/: method.h  parameter.h  record.h  scope.h  st_class.h  symbol_table.h  variable.h
nodes/: expression.cpp  expression.h  main_class.cpp  main_class.h  method_declaration.cpp  node.cpp  node.h  nodes.h  return.cpp  return.h  statement.cpp  statement.h  type.cpp  type.h  variable_declaration.h
resource/: Makefile.bak  phases.drawio
resource/examples/: BinarySearch.java  BinaryTree.java  BubbleSort.java  Factorial.java  LinearSearch.java  LinkedList.java  QuickSort.java  TreeVisitor.java  binarytree.java  factorial.java  quicksort.java  treevisitor.java
resource/images/: phases.drawio
resource/sa_valid/: valid2.java  valid3.java
resource/tests/: Bar.java  FacFib.java  Minimal.java  SumIf.java  SumWhile.java  SumWhileAnd.java  SumWhileIf.java  SumWhileIfAnd.java  bar.java  facfib.java  minimal.java  recursivesum.java  sum-while-and.java  sum-while-if-and.java  sum-while-if.java  sum-while.java
source/: lexer.ll  parser.yy
source/ast/: node.cpp  (+10 more)
src/: lexer.ll  main.cpp  main.h  parser.yy
src/ast/: CMakeLists.txt  class_declaration.cpp  declarations.cpp  expression.cpp  formal_parameter_list.cpp  goal.cpp  identifier.cpp  main_class.cpp  method_body.cpp  method_declaration.cpp  node.cpp  primary_expression.cpp  return.cpp  statement.cpp  type.cpp  variable_declaration.cpp
src/ast/declarations/: CMakeLists.txt  class_declaration.cpp  class_extends_declaration.cpp  declarations.cpp  method_declaration.cpp  variable_declaration.cpp
src/ast/expressions/: CMakeLists.txt  alloc_expression.cpp  arith_expression.cpp  array_access_expression.cpp  array_alloc_expression.cpp  array_length_expression.cpp  array_search_expression.cpp  compare_expression.cpp  expression.cpp  expression_list.cpp  logic_expression.cpp  primary_expression.cpp  unary_expression.cpp
src/ast/formal_parameters/: CMakeLists.txt  formal_parameter.cpp  formal_parameter_list.cpp
src/ast/primary_expressions/: CMakeLists.txt  alloc_expression.cpp  array_alloc_expression.cpp  primary_expression.cpp  unary_expression.cpp
src/ast/statements/: CMakeLists.txt  array_assign_statement.cpp  assign_statement.cpp  else_statement.cpp  if_statement.cpp  print_statement.cpp  statement.cpp  while_statement.cpp
st/: class.cpp  class.h  method.cpp  method.h  parameter.cpp  parameter.h  record.cpp  record.h  scope.cpp  scope.h  st_class.cpp  st_class.h  symbol_table.cpp  symbol_table.h  variable.cpp  variable.h
tests/: array.java  if.java  loops.java  math.java  multiple-empty-func.java  print.java  variable.java
(+82 files in other folders)
